kubernetes/final_results/2_homework/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      # для корректной работы необходимо создать абстракцию Secret, используя команду
      # kubectl create secret generic dockerhub --from-file=.dockerconfigjson=$HOME/.docker/config.json --type=kubernetes.io/dockerconfigjson
      imagePullSecrets:
        - name: dockerhub
      containers:
      - name: myapp
        image: yourusername/yourrepo:1.0.0
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 10m
            memory: 25Mi
        ports:
        - containerPort: 4000
